--- a/ImageMap4Avalonia/ImageMap4Avalonia.csproj
+++ b/ImageMap4Avalonia/ImageMap4Avalonia.csproj
@@ -19,7 +19,12 @@
         <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
+        <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0-preview.2.23128.3" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <AvaloniaResource Include="Icons\**" />
     </ItemGroup>
 
     <ItemGroup>
