--- a/ImageMap4.CMD/ImageMap4.CMD.csproj
+++ b/ImageMap4.CMD/ImageMap4.CMD.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\fNbt\fNbt\fNbt.csproj" />
-    <ProjectReference Include="..\leveldb-mcpe.net\LevelDB-mcpe.Net\LevelDB-mcpe.Net.csproj" />
+    <ProjectReference Include="..\level-db-wrapper\LevelDBWrapper.csproj" />
     <ProjectReference Include="..\utils.nbt\TryashtarUtils.Nbt.csproj" />
   </ItemGroup>
 
